# fuel

./: Cargo.toml  README.md
examples/cube/: main.rs
examples/light/: main.rs
fuel_camera/: Cargo.toml
fuel_camera/src/: first_person.rs  lib.rs
fuel_core/: Cargo.toml
fuel_core/src/: lib.rs  scene.rs
fuel_importer/: Cargo.toml
fuel_importer/src/: gltf_format.rs  lib.rs
fuel_render/: Cargo.toml
fuel_render/src/: lib.rs  light.rs  mesh.rs  polygon.rs  primitive.rs  shader.rs  texture.rs  vertex.rs
fuel_types/: Cargo.toml
fuel_types/src/: lib.rs  position.rs  rotation.rs  scale.rs  transform.rs
fuel_utils/: Cargo.toml
fuel_utils/src/: control.rs  lib.rs  primitive.rs
fuel_window/: Cargo.toml
fuel_window/src/: control.rs  lib.rs
src/: input_mapping.rs  lib.rs  main.rs  scene.rs  window.rs
src/assets/meshes/yoshi/: scene.gltf
src/assets/shaders/: cube.fs  cube.vs  cube_light.fs  cube_light.vs  light.fs  light.vs  shader.fs  shader.vs
src/camera/: first_person.rs  mod.rs
src/renderer/: .polygon.rs.rustfmt  component.rs  config.rs  light.rs  mod.rs  object.rs  pipeline.rs  polygon.rs  shader.rs  texture.rs  transform.rs  types.rs  vertex.rs
src/shaders/: shader.fs  shader.vs
src/utils/: .cube.rs.rustfmt  control.rs  mod.rs  primitive.rs  renderer.rs  shader.rs  time.rs
