[package]
name = "fuel_render"
version = "0.1.0"
authors = ["Alexandre Chêne <kooparse@protonmail.com>"]

[dependencies]
gl = "0.6.0"
nalgebra = "0.14.0"
image = "0.19.0"
gltf = "0.11"
fuel_types = { version = "*", path = "../fuel_types" }
fuel_camera = { version = "*", path = "../fuel_camera" }
fuel_utils = { version = "*", path = "../fuel_utils" }
fuel_core = { version = "*", path = "../fuel_core" }
